--- a/app/src/main/res/layout/include_recipe_list_ingredients_head.xml
+++ b/app/src/main/res/layout/include_recipe_list_ingredients_head.xml
@@ -57,7 +57,8 @@
         android:id="@+id/view_recipeListItem_highlight"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:background="#46ffc400"
+        android:background="@color/colorBookHighlight"
+        android:visibility="invisible"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
