--- a/app/src/main/res/layout/include_recipe_step.xml
+++ b/app/src/main/res/layout/include_recipe_step.xml
@@ -7,11 +7,33 @@
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/playerView_recipeStep"
         android:layout_width="0dp"
-        android:layout_height="300dp"
-        android:layout_margin="8dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintDimensionRatio="h,16:9"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/textView_recipeStep_noVideo"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:background="@color/colorVideoBg"
+        android:textColor="@color/colorFont"
+        app:layout_constraintDimensionRatio="h,16:9"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/recipe_step_no_video"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/textView_recipeStep_desc"
@@ -30,8 +52,9 @@
         android:id="@+id/button_recipeStep_prev"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Previous"
+        android:text="@string/recipe_step_prev"
         android:layout_margin="8dp"
+        android:theme="@style/AppTheme.NavigationButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -39,8 +62,9 @@
         android:id="@+id/button_recipeStep_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Next"
+        android:text="@string/recipe_step_next"
         android:layout_margin="8dp"
+        android:theme="@style/AppTheme.NavigationButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 </merge>
