--- a/app/src/main/res/layout/widget_ingredients.xml
+++ b/app/src/main/res/layout/widget_ingredients.xml
@@ -1,15 +1,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/containter_ingredientsWidget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorWidgetBg"
     android:padding="@dimen/widget_margin">
 
-    <TextView
-        android:id="@+id/textView_ingredientsWidget_name"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="Recipe Name"/>
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView_ingredientsWidget_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="8dp"
+            tools:src="@drawable/ic_doughnut"/>
+
+        <TextView
+            android:id="@+id/textView_ingredientsWidget_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:lines="1"
+            android:ellipsize="end"
+            tools:text="Recipe Name"/>
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listView_ingredientsWidget"
