Fix lint problems.

--- a/app/src/main/res/layout/include_recipe_list_book_line.xml
+++ b/app/src/main/res/layout/include_recipe_list_book_line.xml
@@ -23,6 +23,5 @@
         android:background="@color/colorBookLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/view2" />
+        app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
