--- a/app/src/main/res/layout/include_recipe_list_image_head.xml
+++ b/app/src/main/res/layout/include_recipe_list_image_head.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -44,7 +42,8 @@
             android:layout_height="200dp"
             android:layout_margin="4dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/recipe_header_pie" />
+            android:src="@drawable/recipe_header_pie"
+            android:contentDescription="@string/recipe_list_image_description" />
 
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
