--- a/app/src/main/res/layout/include_recipe_list_ingredients_head.xml
+++ b/app/src/main/res/layout/include_recipe_list_ingredients_head.xml
@@ -37,6 +37,7 @@
     <ImageView
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:contentDescription="@string/recipe_list_arrow_description"
         app:srcCompat="@drawable/ic_chevron_right"
         android:layout_margin="@dimen/recipe_list_margin"
         app:layout_constraintTop_toTopOf="parent"
@@ -50,8 +51,7 @@
         android:background="@color/colorBookLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/view2" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <View
         android:id="@+id/view_recipeListItem_highlight"
