--- a/app/src/main/res/layout/include_recipe_list_steps_head.xml
+++ b/app/src/main/res/layout/include_recipe_list_steps_head.xml
@@ -20,27 +20,16 @@
     <TextView
         android:id="@+id/textView_recipeListItem_desc"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="24dp"
         style="@style/AppTheme.ListHead"
         android:text="@string/recipe_list_steps"
         app:layout_constraintLeft_toRightOf="@+id/view"
-        android:layout_marginStart="@dimen/recipe_list_margin"
-        android:layout_marginEnd="@dimen/recipe_list_margin"
-        app:layout_constraintRight_toLeftOf="@+id/imageView"
+        android:layout_margin="@dimen/recipe_list_margin"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="0dp" />
-
-    <ImageView
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_margin="@dimen/recipe_list_margin"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/imageView" />
 
     <View
         android:layout_width="0dp"
@@ -48,6 +37,5 @@
         android:background="@color/colorBookLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/view2" />
+        app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
