--- a/app/src/main/res/layout/item_recipe_list.xml
+++ b/app/src/main/res/layout/item_recipe_list.xml
@@ -49,6 +49,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         app:srcCompat="@drawable/ic_chevron_right"
+        android:contentDescription="@string/recipe_list_arrow_description"
         android:layout_margin="@dimen/recipe_list_margin"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -61,8 +62,7 @@
         android:background="@color/colorBookLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/view2" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <View
         android:id="@+id/view_recipeListItem_highlight"
