--- a/app/src/main/res/menu/activity_recipes.xml
+++ b/app/src/main/res/menu/activity_recipes.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
      <item
-         android:title="Refresh"
+         android:title="@string/refresh"
          android:id="@+id/activity_recipes_refresh"
          app:showAsAction="always"
          android:icon="@drawable/ic_refresh_white"/>
