--- a/app/src/main/res/layout/widget_ingredients.xml
+++ b/app/src/main/res/layout/widget_ingredients.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:theme="@style/AppTheme.IngredientsWidget"
     android:background="@color/colorWidgetBg"
     android:padding="@dimen/widget_margin">
 
